------------------------------------------------------------
06/27/2023
SQL Scripts
- removed receipt_number from receipts table
- removed receiptIDFromNumber function
- replaced all references of receipt_number with receipt_id
-- added inventory table to database
-- added triggers stores_after_insert and items_after_insert
    -- these triggers ensure any new items and stores added are
       also added to the inventory table, with all their 
       unique combinations
REGISTER TERMINAL
- 
------------------------------------------------------------
------------------------------------------------------------
06/25/2023
SQL Scripts
- removed member_account_number from members table
- removed memberIDFromNumber function
- replaced all references of member_account_number with member_id
REGISTER TERMINAL
- updated memberPhoneLookup
------------------------------------------------------------
------------------------------------------------------------
06/24/2023
SQL Scripts
- removed store_number from stores table
- replaced all references of store_number with store_id
- removed cashier_number from cashiers table
- replaced all references of cashier_number with cashier_id
- removed function registerIDFromNumber
- removed register_number from registers table
- removed all references of register_number with register_id
REGISTER TERMINAL
- updated RegisterLogin, storeAddressLookup, createReceipt, and RegisterLogoff
------------------------------------------------------------